--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ importFrom("graphics",
               "points")
 
 importFrom("stats",
+              "filter",
               "mad",
               "supsmu")
 
