add savitzkyGolay manual page, finish work on savitzkyGolay; closes #16

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export("binPeaks",
        "movingAverage",
        "referencePeaks",
        "removeEmptyMassObjects",
+       "savitzkyGolay",
        "warpMassPeaks",
        "warpMassSpectra")
 
