--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Depends: R (>= 2.14.0), methods
 Suggests: testthat
 Description: MALDIquant provides a complete analysis pipeline for MALDI-TOF
   and other mass spectrometry data. Distinctive features include baseline
-  subtraction using the SNIP algorithm, peak alignment using warping
+  subtraction methods such as TopHat or SNIP, peak alignment using warping
   functions, handling of replicated measurements as well as allowing spectra
   with different resolutions.
 License: GPL (>= 3)
