add smoothIntensity; transformIntensity: replace fun by method argument; close #41

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,10 +36,8 @@ export("averageMassSpectra",
        "isMassSpectrum",
        "isMassSpectrumList",
        "mergeMassPeaks",
-       "movingAverage",
        "referencePeaks",
        "removeEmptyMassObjects",
-       "savitzkyGolay",
        "warpMassPeaks",
        "warpMassSpectra")
 
@@ -62,6 +60,7 @@ exportMethods("as.matrix",
               "plot",
               "points",
               "removeBaseline",
+              "smoothIntensity",
               "snr",
               "totalIonCurrent",
               "transformIntensity",
