readd deprecated functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,23 +36,29 @@ export("averageMassSpectra",
        "isMassSpectrum",
        "isMassSpectrumList",
        "mergeMassPeaks",
+       "mergeMassSpectra",
+       "movingAverage",
        "referencePeaks",
        "removeEmptyMassObjects",
+       "savitzkyGolay",
        "warpMassPeaks",
        "warpMassSpectra")
 
 exportMethods("as.matrix",
+              "calibrate",
               "calibrateIntensity",
               "detectPeaks",
               "estimateBaseline",
               "estimateNoise",
               "intensity",
               "intensity<-",
+              "iplot",
               "isEmpty",
               "isRegular",
               "labelPeaks",
               "length",
               "lines",
+              "ltrim",
               "mass",
               "mass<-",
               "metaData",
@@ -60,9 +66,12 @@ exportMethods("as.matrix",
               "plot",
               "points",
               "removeBaseline",
+              "rtrim",
               "smoothIntensity",
               "snr",
+              "standardizeTotalIonCurrent",
               "totalIonCurrent",
+              "totalIonCurrent<-",
               "transformIntensity",
               "trim")
 
