--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export("averageMassSpectra",
        "createMassPeaks",
        "createMassSpectrum",
        "determineWarpingFunctions",
+       "expressionMatrix",
        "filterPeaks",
        "findEmptyMassObjects",
        "intensityMatrix",
