--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: MALDIquant
-Version: 1.9.5
-Date: 2014-03-23
+Version: 1.9.6
+Date: 2014-03-24
 Title: Quantitative Analysis of Mass Spectrometry Data
 Authors@R: c(person("Sebastian", "Gibb", role=c("aut", "cre"),
                     email="mail@sebastiangibb.de"),
@@ -17,3 +17,4 @@ URL: http://strimmerlab.org/software/maldiquant/
     https://github.com/sgibb/MALDIquant/
 BugReports: https://github.com/sgibb/MALDIquant/issues/
 LazyLoad: yes
+VignetteBuilder: knitr
