--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R: c(person("Sebastian", "Gibb", role=c("aut", "cre"),
                     email="mail@sebastiangibb.de"),
              person("Korbinian", "Strimmer", role="ths"))
 Depends: R (>= 3.0.0), methods
-Suggests: testthat (>= 0.8)
+Suggests: knitr, testthat (>= 0.8)
 Description: MALDIquant provides a complete analysis pipeline for MALDI-TOF
   and other mass spectrometry data. Distinctive features include baseline
   subtraction methods such as TopHat or SNIP, peak alignment using warping
