--- a/.travis.yml
+++ b/.travis.yml
@@ -23,5 +23,7 @@ notifications:
     on_failure: change
 env:
   - global:
+    - R_BUILD_ARGS=""
+    - R_CHECK_ARGS="--as-cran"
     - WARNINGS_ARE_ERRORS=1
     - BOOTSTRAP_LATEX=1
