--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,21 @@
 Package: MALDIquant
-Version: 1.10.1
-Date: 2014-05-13
+Version: 1.10.2
+Date: 2014-06-11
 Title: Quantitative Analysis of Mass Spectrometry Data
 Authors@R: c(person("Sebastian", "Gibb", role=c("aut", "cre"),
-                    email="mail@sebastiangibb.de"),
-             person("Korbinian", "Strimmer", role="ths"))
+        email="mail@sebastiangibb.de"), person("Korbinian", "Strimmer",
+        role="ths"))
 Depends: R (>= 3.0.0), methods
 Suggests: knitr, testthat (>= 0.8)
-Description: MALDIquant provides a complete analysis pipeline for MALDI-TOF
-  and other mass spectrometry data. Distinctive features include baseline
-  subtraction methods such as TopHat or SNIP, peak alignment using warping
-  functions, handling of replicated measurements as well as allowing spectra
-  with different resolutions.
+Description: MALDIquant provides a complete analysis pipeline for
+        MALDI-TOF and other mass spectrometry data. Distinctive
+        features include baseline subtraction methods such as TopHat or
+        SNIP, peak alignment using warping functions, handling of
+        replicated measurements as well as allowing spectra with
+        different resolutions.
 License: GPL (>= 3)
 URL: http://strimmerlab.org/software/maldiquant/
-    https://github.com/sgibb/MALDIquant/
+        https://github.com/sgibb/MALDIquant/
 BugReports: https://github.com/sgibb/MALDIquant/issues/
 LazyLoad: yes
 VignetteBuilder: knitr
