--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export("alignSpectra",
        "isMassSpectrum",
        "isMassSpectrumList",
        "mergeMassPeaks",
+       "plotImsSlice",
        "referencePeaks",
        "removeEmptyMassObjects",
        "warpMassPeaks",
