--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,17 @@ before_install:
   - ./travis-tool.sh bootstrap
 
 install:
+  - ./travis-tool.sh github_package jimhester/covr
   - ./travis-tool.sh install_deps
   - ./travis-tool.sh install_aptget pgf
 
 script:
   - ./travis-tool.sh run_tests
 
-on_failure:
+after_success:
+  - Rscript -e 'library(covr);coveralls()'
+
+after_failure:
   - ./travis-tool.sh dump_logs
 
 notifications:
