--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,15 @@
-# taken from
-# https://github.com/craigcitro/r-travis/blob/master/sample.travis.yml
+language: r
+warnings_are_errors: true
 
-language: c
+r_github_packages:
+  - jimhester/covr
 
-env:
-  global:
-    - R_BUILD_ARGS=" " R_CHECK_ARGS="--as-cran" BOOTSTRAP_LATEX="1" WARNINGS_ARE_ERRORS="1"
-
-before_install:
-  - curl -OL http://raw.github.com/craigcitro/r-travis/master/scripts/travis-tool.sh
-  - chmod 755 ./travis-tool.sh
-  - ./travis-tool.sh bootstrap
-
-install:
-  - ./travis-tool.sh github_package jimhester/covr
-  - ./travis-tool.sh install_deps
-  - ./travis-tool.sh install_aptget pgf
-
-script:
-  - ./travis-tool.sh run_tests
+r_binary_packages:
+  - testthat
+  - knitr
 
 after_success:
   - Rscript -e 'library(covr);coveralls()'
-
-after_failure:
-  - ./travis-tool.sh dump_logs
 
 notifications:
   email:
