--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,12 +7,11 @@ Authors@R: c(person("Sebastian", "Gibb", role=c("aut", "cre"),
         role="ths"))
 Depends: R (>= 3.0.0), methods
 Suggests: knitr, testthat (>= 0.8)
-Description: MALDIquant provides a complete analysis pipeline for
-        MALDI-TOF and other mass spectrometry data. Distinctive
-        features include baseline subtraction methods such as TopHat or
-        SNIP, peak alignment using warping functions, handling of
-        replicated measurements as well as allowing spectra with
-        different resolutions.
+Description: A complete analysis pipeline for MALDI-TOF and other
+        mass spectrometry data. Distinctive features include baseline
+        subtraction methods such as TopHat or SNIP, peak alignment using
+        warping functions, handling of replicated measurements as well as
+        allowing spectra with different resolutions.
 License: GPL (>= 3)
 URL: http://strimmerlab.org/software/maldiquant/
         https://github.com/sgibb/MALDIquant/
