use parallel::mclapply and parallel::mcmapply for preprocessing functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,9 @@
 import("methods")
 
+importFrom("parallel",
+              "mclapply",
+              "mcmapply")
+
 importFrom("graphics",
               "lines",
               "plot",
