--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,7 @@ Authors@R: c(person("Sebastian", "Gibb", role=c("aut", "cre"),
         email="mail@sebastiangibb.de"), person("Korbinian", "Strimmer",
         role="ths"))
 Depends: R (>= 3.0.0), methods
+Imports: parallel
 Suggests: knitr, testthat (>= 0.8)
 Description: A complete analysis pipeline for MALDI-TOF and other mass
         spectrometry data. Distinctive features include baseline
