--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ r_binary_packages:
   - knitr
 
 after_success:
-  - Rscript -e 'library(covr);codecov()'
+  - Rscript -e 'library(covr);codecov(exclusions="R/Deprecated.R")'
 
 notifications:
   email:
