--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ exportMethods("as.matrix",
               "metaData",
               "metaData<-",
               "plot",
+              "plotMsiSlice",
               "points",
               "removeBaseline",
               "smoothIntensity",
