add msiSlices to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export("alignSpectra",
        "isMassSpectrum",
        "isMassSpectrumList",
        "mergeMassPeaks",
+       "msiSlices",
        "plotImsSlice",
        "referencePeaks",
        "removeEmptyMassObjects",
