--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ r_binary_packages:
 - testthat
 - knitr
 after_success:
-- Rscript -e 'library(covr);codecov(exclusions="R/Deprecated.R");coveralls(exclusions="R/Deprecated.R")'
+- Rscript -e 'library(covr);codecov(exclusions="R/Deprecated.R")'
 notifications:
   email:
     on_success: change
