--- a/NAMESPACE
+++ b/NAMESPACE
@@ -98,6 +98,7 @@ exportMethods("as.matrix",
               "removeBaseline",
               "smoothIntensity",
               "snr",
+              "topN",
               "totalIonCurrent",
               "transformIntensity",
               "trim")
