add esiprot; doc and unit tests missing [ci skip]

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,6 +76,7 @@ exportMethods("as.matrix",
               "coordinates",
               "coordinates<-",
               "detectPeaks",
+              "esiprot",
               "estimateBaseline",
               "estimateNoise",
               "intensity",
