First draft implementation of OnDiskVector

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: MALDIquant
-Version: 1.19.1
-Date: 2019-03-03
+Version: 1.99.1
+Date: 2019-03-05
 Title: Quantitative Analysis of Mass Spectrometry Data
 Authors@R: c(person("Sebastian", "Gibb", role=c("aut", "cre"),
         email="mail@sebastiangibb.de",
@@ -25,4 +25,84 @@ URL: http://strimmerlab.org/software/maldiquant/
 BugReports: https://github.com/sgibb/MALDIquant/issues/
 LazyLoad: yes
 VignetteBuilder: knitr
-RoxygenNote: 5.0.1
+RoxygenNote: 6.1.1
+Collate:
+    'AllClasses.R'
+    'AllGenerics.R'
+    'Deprecated.R'
+    'hidden_aliases.R'
+    'OnDiskVector-class.R'
+    'alignSpectra-functions.R'
+    'approxfun-methods.R'
+    'as-methods.R'
+    'as.matrix-functions.R'
+    'as.matrix-methods.R'
+    'averageMassSpectra-functions.R'
+    'binPeaks-functions.R'
+    'calculateLabelPositions-functions.R'
+    'calibrateIntensity-functions.R'
+    'calibrateIntensity-methods.R'
+    'colMedians-functions.R'
+    'constructor-functions.R'
+    'coordinates-methods.R'
+    'deprecated-functions.R'
+    'detectPeaks-methods.R'
+    'determineWarpingFunctions-functions.R'
+    'doByLabels-functions.R'
+    'estimateBaseline-functions.R'
+    'estimateBaseline-methods.R'
+    'estimateNoise-functions.R'
+    'estimateNoise-methods.R'
+    'filterPeaks-functions.R'
+    'findEmptyMassObjects-functions.R'
+    'findLocalMaxima-methods.R'
+    'grouper-functions.R'
+    'intensity-methods.R'
+    'intensityMatrix-functions.R'
+    'irregular-functions.R'
+    'isEmpty-methods.R'
+    'isFunctionList-functions.R'
+    'isMassObject-functions.R'
+    'isMassObjectList-functions.R'
+    'isRegular-methods.R'
+    'isValidHalfWindowSize-functions.R'
+    'labelPeaks-methods.R'
+    'lapply-functions.R'
+    'length-methods.R'
+    'lines-methods.R'
+    'localMaxima-functions.R'
+    'mapply-functions.R'
+    'mass-methods.R'
+    'match.closest-functions.R'
+    'memoryUsage-functions.R'
+    'merge-functions.R'
+    'metaData-methods.R'
+    'monoisotopic-functions.R'
+    'monoisotopicPeaks-methods.R'
+    'morphologicalFilter-functions.R'
+    'msiSlices-functions.R'
+    'mz-methods.R'
+    'onAttach.R'
+    'plot-methods.R'
+    'plotMsiSlice-functions.R'
+    'plotMsiSlice-methods.R'
+    'points-methods.R'
+    'range-functions.R'
+    'referencePeaks-functions.R'
+    'removeBaseline-methods.R'
+    'removeEmptyMassObjects-functions.R'
+    'reorder-functions.R'
+    'replaceNegativeIntensityValues-functions.R'
+    'show-functions.R'
+    'show-methods.R'
+    'smoothIntensity-methods.R'
+    'smoothingFilters-functions.R'
+    'snr-methods.R'
+    'subset-methods.R'
+    'totalIonCurrent-methods.R'
+    'transformIntensity-methods.R'
+    'trim-methods.R'
+    'unlist-functions.R'
+    'valid-methods.R'
+    'warp-functions.R'
+    'warpingFunction-functions.R'
