--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export("alignSpectra",
        "createMassPeaks",
        "createMassSpectrum",
        "createMassSpectrumOnDisk",
+       "OnDiskVector",
        "determineWarpingFunctions",
        "filterPeaks",
        "findEmptyMassObjects",
