Add basic options mechanism

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ export("alignSpectra",
        "isMassPeaksList",
        "isMassSpectrum",
        "isMassSpectrumList",
+       "MALDIquantOptions",
        "match.closest",
        "mergeMassPeaks",
        "msiSlices",
