Adapt to MassSpectrumOnDisk

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,8 @@ export("alignSpectra",
        "isMassPeaksList",
        "isMassSpectrum",
        "isMassSpectrumList",
+       "isMassSpectrumOnDisk",
+       "isMassSpectrumOnDiskList",
        "match.closest",
        "mergeMassPeaks",
        "msiSlices",
