do import graphics::plot.default

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ importFrom("graphics",
               "arrows",
               "lines",
               "par",
+              "plot.default",           
               "points",
               "rasterImage",
               "rect",
