ci: setup tinytex

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -39,6 +39,8 @@ jobs:
         with:
           r-version: ${{ matrix.config.r }}
 
+      - uses: r-lib/actions/setup-tinytex@master
+
       - uses: r-lib/actions/setup-pandoc@v1
 
       - name: Query dependencies
