--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: MALDIquant
-Version: 1.21
+Version: 1.21.0.99
 Date: 2021-12-21
 Title: Quantitative Analysis of Mass Spectrometry Data
 Authors@R: c(
@@ -21,7 +21,7 @@ Authors@R: c(
         comment = c(ORCID = "0000-0002-1520-2268"),
         role = "ctb"
     ),
-    person(given = "Paolo", "family = Inglese", role = "ctb"))
+    person(given = "Paolo", family = "Inglese", role = "ctb"))
 Depends: R (>= 4.0.0), methods
 Imports: parallel
 Suggests: knitr, testthat (>= 0.8)
